complete basic rules commands

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
     testCompile(
             group: 'junit', name: 'junit', version: '4.12',
             "org.assertj:assertj-core:3.8.0",
-            "org.mockito:mockito-core:1.+"
+            "org.mockito:mockito-core:1.+",
+            "pl.pragmatists:JUnitParams:1.1.1"
     )
 }
