--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,14 @@ apply plugin: 'java'
 
 sourceCompatibility = 1.8
 
+sourceSets {
+    main {
+        resources {
+            srcDir "src/main/resources"
+        }
+    }
+}
+
 repositories {
     jcenter()
 }
@@ -16,4 +24,10 @@ dependencies {
             "org.mockito:mockito-core:1.+",
             "pl.pragmatists:JUnitParams:1.1.1"
     )
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.minhnln.challenge03.PhoneNumberConverterApplication'
+    }
 }
